Usa Virtual Threads para o monitor de conexão do jogador e para a partida